projeto-roupa-infantil/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superdevsecops
  labels:
    app: superdevsecops
    environment: production
