projeto-roupa-infantil/k8s/deploy-banco.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: "database-service"
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database  # Certifique-se de que este label corresponde ao seletor do Serviço
    spec:
      containers:
        - name: database
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: database-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
