projeto-roupa-infantil/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: deployapp
  template:
    metadata:
      labels:
        app: deployapp
    spec:
      securityContext:
        fsGroup: 33  # ID de grupo comum para www-data no Debian e derivados
      containers:
        - name: deployapp
          image: andrejacopetti/lojaroupa:latest
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: app-content
              mountPath: /var/www/html  # Monta o conteúdo diretamente em /var/www/html para servir corretamente
      volumes:
        - name: app-content
          hostPath:
            path: /var/www/html/projeto-roupa-infantil  # Altere este caminho para o local do código-fonte no host
            type: DirectoryOrCreate
