projeto-roupa-infantil/k8s/deploy-svc-banco.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database-service
spec:
  selector:
    app: database  # Este seletor deve coincidir com o label do StatefulSet do banco de dados
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
