projeto-roupa-infantil/k8s/deploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-svc
spec:
  selector:
    app: deployapp
  ports:
    - name: http
      targetPort: 3000
      port: 80
      nodePort: 30002
  type: NodePort
